# joke-apieff906ae-3b69-4039-adbf-04a62e324e0a

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: read_joke_service.py  server.py
